--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,9 @@
         "symfony/var-dumper": "~2.6",
         "nesbot/carbon": "~1.18"
     },
+    "require-dev": {
+        "phpunit/phpunit": "~4.6"
+    },
     "autoload": {
         "psr-0": { "": "src/" }
     },
