--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "symfony/validator": "~2.6",
         "facebook/php-sdk-v4": "~4.0",
         "symfony/var-dumper": "~2.6",
-        "nesbot/carbon": "~1.18"
+        "nesbot/carbon": "~1.18",
+        "guzzlehttp/guzzle": "~5.2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.6"
