--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "facebook/php-sdk-v4": "~4.0",
         "symfony/var-dumper": "~2.6",
         "nesbot/carbon": "~1.18",
-        "guzzlehttp/guzzle": "~5.2.0"
+        "guzzlehttp/guzzle": "~5.2.0",
+        "doctrine/dbal": "~2.2"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.6"
