--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "symfony/var-dumper": "~2.6",
         "nesbot/carbon": "~1.18",
         "guzzlehttp/guzzle": "~5.2.0",
-        "doctrine/dbal": "~2.2"
+        "doctrine/dbal": "~2.2",
+	"ext-mbstring": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.6"
