--- a/composer.json
+++ b/composer.json
@@ -26,13 +26,16 @@
         "nesbot/carbon": "~1.18",
         "guzzlehttp/guzzle": "~5.2.0",
         "doctrine/dbal": "~2.2",
-	"ext-mbstring": "*"
+        "ext-mbstring": "*",
+        "monolog/monolog": "^1.18"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.6"
     },
     "autoload": {
-        "psr-0": { "": "src/" }
+        "psr-0": {
+            "": "src/"
+        }
     },
     "extra": {
         "branch-alias": {
