--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "symfony/translation": "~2.6",
         "symfony/twig-bridge": "~2.6",
         "symfony/validator": "~2.6",
+        "symfony/http-kernel": "^2.8",
         "facebook/php-sdk-v4": "~4.0",
         "symfony/var-dumper": "~2.6",
         "nesbot/carbon": "~1.18",
