Customizable message page size

--- a/env.php.sample
+++ b/env.php.sample
@@ -3,4 +3,5 @@
 $app['fb_api_key'] = 'fb_api_key';
 $app['fb_api_secret'] = 'fb_api_secret';
 $app['fb_redirect_login_url'] = 'http://localhost:8888/facebook';
+$app['message_page_size'] = 30;
 
